@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.68
+Release: 0.69
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -517,6 +517,9 @@ fi
 %{__prefix}/include/popt.h
 
 %changelog
+* Mon Aug  5 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.69
+- python: bare bones rollback bindings.
+
 * Sun Aug  4 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.68
 - resurrect --rollback.
 - renumber the callback types to be an orthogonal bit mask.
